--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ header {
 
 .startpage h1 {
     font-size: 500%;         /* Massiv rubrik på startsidan */
+    font-family: 'Merienda', cursive;
+}
+
+.menu h2 {
+    /* Lägg till i befintlig regel */
+    font-family: 'Merienda', cursive;
+}
 }
 
 .tagline {
@@ -78,3 +85,4 @@ footer {
     box-shadow: inset 0 0 20px #007241;
     border-radius: 50%;
 }
+
