--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 @charset "UTF-8";
 
 body {
-    margin: auto;            /* Centrere sidan */
-    max-width: 860px;
-    font-family: sans-serif;
-    font-size: 100%;         /* Startvärde */
+    
+    font-family: "Helvetica Neue", "Liberation Sans", Calibri, Arial, sans-serif;
 }
 
 section, header, footer {
@@ -85,4 +83,5 @@ footer {
     box-shadow: inset 0 0 20px #007241;
     border-radius: 50%;
 }
+
 
