--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ header {
     text-align: center;
 }
 
+h1::first-letter {
+    color: #00AF64;
+}
 .startpage h1 {
     font-size: 500%;         /* Massiv rubrik på startsidan */
     font-family: 'Merienda', cursive;
@@ -83,5 +86,6 @@ footer {
     box-shadow: inset 0 0 20px #007241;
     border-radius: 50%;
 }
+
 
 
